# uhm

./: .gitignore  README.md
.github/workflows/: deploy.yml
architecture/: .gitignore  category_lab.py  category_lab2.py  category_lab3.py  falsify_lab.py  fate_lab.py  hd_lab.py  hd_seasonal_audit.py  heptacode.py  holarch_lab.py  homoholograph.py  interp_lab.py  interp_verify.py  lens_lab.py  main.tex  prime_radiant.py  prime_radiant.verum  psyche_lab.py  pyhd_bug_report.md  references.bib  sky_lab.py  symmetry_lab.py  talos_v0_emulator.py  wheel_relations_lab.py
architecture-ru/: main.tex  references.bib
architecture-ru/sections/: 00-genesis.tex  01-introduction.tex  02-collapse.tex  03-substrate.tex  04-fabric.tex  05-ecc.tex  06-energy.tex  07-selfmodel.tex  08-composition.tex  09-scaling.tex  10-realizability.tex  11-abi.tex  11-redteam.tex  12-benchmarks.tex  13-discussion.tex  14-platform.tex  15-discussion.tex  appendix-a-tick.tex  appendix-b-energy.tex  appendix-c-fano-tables.tex  appendix-d-abi.tex  appendix-e-glossary.tex
architecture/prime-radiant-rs/: Cargo.toml
architecture/prime-radiant-rs/src/: calib.rs  demo.rs  estimator.rs  holon.rs  interpret.rs  main.rs  model.rs  navigate.rs  pair.rs  sensor_git.rs  ui.rs
architecture/sections/: 00-genesis.tex  02-collapse.tex  (+21 more)
ontology/: main.aux  main.out  main.tex  main.toc
ontology-ru/: main.aux  main.out  main.tex  main.toc
paper/: .gitignore  main.tex  references.bib
scripts/: build-paper.ts
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
(+387 files in other folders)
